--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,3 +14,5 @@ glob = "0.3.1"
 toml-datetime-compat = { version = "0.3.0", features = ["chrono"] }
 itertools = "0.13"
 rand = "0.8"
+log = "0.4.22"
+log4rs = "1.3.0"
