--- a/master/server/Cargo.toml
+++ b/master/server/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.5"
+axum = { version = "0.7.5", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.21.2", features = ["full"] }
 tracing-subscriber = "0.3"
@@ -22,3 +22,7 @@ jsonwebtoken = "9.3.0"
 serde_json = "1.0.128"
 chrono = { version = "0.4.38", features = ["serde"] }
 time = "0.3.36"
+tower-http = { version = "0.5", features = ["fs", "cors"] }
+toml-datetime-compat = { version = "0.3.0", features = ["chrono"] }
+regex = "1.10.6"
+http = "1.1.0"
