--- a/master/server/media/cfg/playlist.toml
+++ b/master/server/media/cfg/playlist.toml
@@ -1,27 +1,23 @@
 [working_hours]
-schedule = [
-  [08:00:00, 20:00:00],
-  [08:00:00, 20:00:00],
-  [08:00:00, 22:00:00],
-  [08:00:00, 20:00:00],
-  [08:00:00, 20:00:00],
-  [08:00:00, 21:46:00],
-  [10:00:00, 22:00:00],
-]
-exceptions = {2024-07-21 = [10:00:00, 20:00:00], 2024-07-14 = [10:00:00, 17:00:00]}
+schedule = [[09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00]]
+
+[working_hours.exceptions]
+2025-01-07 = [10:00:00, 18:00:00]
+2025-01-01 = [10:00:00, 18:00:00]
+2025-01-02 = [10:00:00, 18:00:00]
 
 [music]
 shuffle = true
-schedule = [
-  [1970-01-01, 1970-12-31, [
-    "music",
-  ]]
-]
+schedule = [[1970-01-01, 1970-12-31, ["music"]]]
 
 [advertizement]
-schedule = {"00:10:00" = ["ad_1",], "00:20:00" = ["ad_2",], "00:40:00" = ["ad_3",]}
-start_jingle="jingle/open.mp3" 
-end_jingle="jingle/close.mp3"
+start_jingle = "jingle/open.mp3"
+end_jingle = "jingle/close.mp3"
+
+[advertizement.schedule]
+"00:10:00" = ["ad_1"]
+"00:20:00" = ["ad_2"]
+"00:40:00" = ["ad_3"]
 
 [time_announcement]
 folder = "time_announcement"
