--- a/master/server/media/cfg/playlist.toml
+++ b/master/server/media/cfg/playlist.toml
@@ -1,14 +1,14 @@
 [working_hours]
-schedule = [[09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00], [09:00:00, 19:00:00]]
+schedule = [[08:00:00, 21:00:00], [08:00:00, 21:00:00], [08:00:00, 21:00:00], [08:00:00, 21:00:00], [08:00:00, 21:00:00], [08:00:00, 21:00:00], [08:00:00, 21:00:00]]
 
 [working_hours.exceptions]
-2025-01-01 = [10:00:00, 18:00:00]
-2025-01-02 = [10:00:00, 18:00:00]
-2025-01-07 = [10:00:00, 18:00:00]
+2025-01-01 = [13:00:00, 20:00:00]
+2024-12-31 = [08:00:00, 22:00:00]
+2025-01-02 = [08:00:00, 20:00:00]
 
 [music]
 shuffle = true
-schedule = [[1970-01-01, 1970-12-31, ["music"]]]
+schedule = [[1970-12-20, 1970-12-31, ["Общая музыка/На новый год"]], [1970-01-01, 1970-01-10, ["Общая музыка/На новый год"]], [1970-05-05, 1970-05-09, ["Общая музыка/На 9е мая"]], [1970-01-01, 1970-12-31, ["Общая музыка/Будние"]]]
 
 [advertizement]
 start_jingle = "jingle/open.mp3"
@@ -16,8 +16,8 @@ end_jingle = "jingle/close.mp3"
 
 [advertizement.schedule]
 "00:20:00" = ["ad_2"]
-"00:40:00" = ["ad_3"]
 "00:10:00" = ["ad_1"]
+"00:40:00" = ["ad_3"]
 
 [time_announcement]
 folder = "time_announcement"
